# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ans_standard/notification.gni")
import("//build/test.gni")

module_output_path = "ans_standard/benchmarktest"

ohos_benchmarktest("Benchmark_Publish_Test") {
  module_out_path = module_output_path
  include_dirs = [
    "${interfaces_path}/ans/native/include",
    "${services_path}/ans/include",
  ]

  sources = [ "notification_publish_test.cpp" ]

  deps = [
    "${frameworks_path}/ans/core:ans_core",
    "${frameworks_path}/ans/native:ans_innerkits",
    "//third_party/benchmark:benchmark",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:wantagent_innerkits",
    "multimedia_image_standard:image_native",
    "relational_store:native_rdb",
  ]
  subsystem_name = "notification"
  part_name = "ans_standard"
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":Benchmark_Publish_Test",
  ]
}
