# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/test.gni")

module_output_path = "${component_name}/benchmarktest"

ohos_benchmarktest("Benchmark_Publish_Test") {
  module_out_path = module_output_path
  include_dirs = [
    "${inner_api_path}",
    "${services_path}/ans/include",
  ]

  sources = [ "notification_publish_test.cpp" ]

  deps = [
    "${core_path}:ans_core",
    "${frameworks_module_ans_path}:ans_innerkits",
    "//third_party/benchmark:benchmark",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:wantagent_innerkits",
    "multimedia_image_standard:image_native",
    "relational_store:native_rdb",
  ]
  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":Benchmark_Publish_Test",
  ]
}
