# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/notification/ans_standard/notification.gni")
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "ans_standard/services"

##############################fuzztest##########################################
ohos_fuzztest("RemoveNotificationSlotFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/notification/ans_standard/test/fuzztest/removenotificationslot_fuzzer"

  include_dirs = []
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "removenotificationslot_fuzzer.cpp" ]

  deps = [
    "${frameworks_path}/ans/native:ans_innerkits",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "multimedia_image_standard:image_native",
    "native_appdatamgr:native_rdb",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":RemoveNotificationSlotFuzzTest" ]
}
###############################################################################
