# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")
import("//build/test.gni")

SUBDEMOSYSTEM_DIR = "${component_path}/test/resource/ansSTSlotGroupTest"

group("ansSTSlotGroupTest") {
  deps = [ ":libraryAnsSTSlotGroupTest" ]
}

config("ansSTSlotGroupTestConfig") {
  visibility = [ ":*" ]

  include_dirs = [
    "${SUBDEMOSYSTEM_DIR}/include",
    "${aafwk_kits_path}/appkit/native/app",
    "${aafwk_services_path}/abilitymgr/include",
    "${inner_api_path}",
  ]

  defines = [
    "APP_LOG_TAG = \"ansSTSlotGroupTest\"",
    "LOG_DOMAIN = 0xD002200",
  ]
}

ohos_shared_library("libraryAnsSTSlotGroupTest") {
  sources = [ "${SUBDEMOSYSTEM_DIR}/src/ans_slotgroup_test.cpp" ]

  configs = [ ":ansSTSlotGroupTestConfig" ]

  deps = [
    "${aafwk_kits_path}/appkit:appkit_native",
    "${core_path}:ans_core",
    "${frameworks_module_ans_path}:ans_innerkits",
    "//utils/native/base:utilsbase",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "${subsystem_name}"
  part_name = "${subsystem_name}"
}
